# mcu-peripheral-drivers

./: README.md
day-01-gpio-output/day-01-gpio-output/: COMMIT_MESSAGE.txt  PROGRESS.md  README_UPDATE_SNIPPET.md  TARGET_REPOSITORY.txt  UPLOAD_INSTRUCTIONS.md
day-02-gpio-input-debounce/: COMMIT_MESSAGE.txt  PROGRESS_UPDATE.md  README_UPDATE_SNIPPET.md  UPLOAD_INSTRUCTIONS.md
day-02-gpio-input-debounce/docs/: gpio-input-debounce-notes.md
day-03-exti-button-interrupt/: CMakeLists.txt  COMMIT_MESSAGE.txt  PROGRESS_UPDATE.md  README_UPDATE_SNIPPET.md  UPLOAD_INSTRUCTIONS.md  VERIFICATION_RESULT.txt
day-03-exti-button-interrupt/docs/: exti-interrupt-notes.md
day-03-exti-button-interrupt/drivers/exti/: exti_button_core.c  exti_button_core.h
day-03-exti-button-interrupt/examples/03-exti-button-interrupt/: README.md  host_simulation.c  stm32_main_integration.c
day-03-exti-button-interrupt/learning-log/: day-03-exti-button-interrupt.md
day-03-exti-button-interrupt/tests/: test_exti_button_core.c
day-04-basic-timer-periodic-interrupt/: CMakeLists.txt  COMMIT_MESSAGE.txt  PROGRESS_UPDATE.md  README_UPDATE_SNIPPET.md  UPLOAD_INSTRUCTIONS.md  VERIFICATION_RESULT.txt
day-04-basic-timer-periodic-interrupt/docs/: basic-timer-notes.md
day-04-basic-timer-periodic-interrupt/drivers/timer/: periodic_timer_core.c  periodic_timer_core.h  tick_dispatcher.c  tick_dispatcher.h
day-04-basic-timer-periodic-interrupt/examples/04-basic-timer-periodic-interrupt/: README.md  host_simulation.c  stm32_main_integration.c
day-04-basic-timer-periodic-interrupt/learning-log/: day-04-basic-timer.md
day-04-basic-timer-periodic-interrupt/tests/: test_periodic_timer_core.c  test_tick_dispatcher.c
(+28 files in other folders)
